# c-cnc24

./: .gitignore  CMakeLists.txt  C_BASICS.md  README.md  machine.ini  test.gcode
MATLAB/: Cartesian3DPrinter.m  README.md  sm_3d_printer.slx  sm_3d_printer_2022a.slx
MATLAB/SingleAxisExample/: single_axis.m  single_axis.slx  single_axis_2022a.slx
MATLAB/s-functions/: mqtt_pub_rapid.m  mqtt_sub_position.m
examples/: CMakeLists.txt  README.md  example.dot  hello.c
examples/inc/: 3_include_guards.h  4_struct_union.h  pid_controller.h
examples/src/: 10_pid.c  1_types.c  2_file.c  3_include_guards.c  4_struct_union.c  5_inout_p.c  6_timed_loop.c  7_timed_loop.c  8_timed_loop.c  fsm.c  fsm.h  moodle_quiz.c  pid_controller.c  stats.c
goodies/: README.md
src/: block.c  block.h  defines.h.in  fsm.c  fsm.dot  fsm.h  machine.c  machine.h  point.c  point.h  program.c  program.h
src/main/: ccnc.c
var/: README.md
